css/styles.css
/* Temp Override */

/* Global Styles */
html, body {
	height:100%;
}

/* Uploader Bottom Sheet */
#output img {
	width: 48px;
}
#upload {
	max-height: 100%;
}
#close {
	width: 24px;
	height: 24px;
	cursor: pointer;
}
#close > .material-icons {
	top: 8px;
	right: 8px;
	position: absolute;
}
@media (min-width: 800px) {
	#upload {
		max-width: 80%;
		margin: 0 auto;
		border-radius: 2px
	}
}

/* Upload Finished */
.console {
	display: none;
	height: 500px;
	max-height: 50vh;
	overflow: auto;
	background-color: #202020;
	border-radius: 4px;
}
#console {
	padding: 20px;
	color: #fff;
}
.upfin-container {
	display: flex;
	justify-content: center;
	height: 100%;
}
.upfin {
	width: 90%;
	align-self: center;
	border-radius: 4px;
	margin: 0;
}
@media (max-width: 600px) {
	.upfin {
		width: 100% !important;
	}
}
#description {
	margin-bottom: 20px;
}

/* Material Global */
.singlefab {
	position: fixed;
	bottom: 24px;
	right: 24px;
}
.container {
	width: 85% !important;
}
@media (max-width: 600px) {
	.container {
		width: 90% !important;
	}
}
.full-width {
	border-radius: 0;
	margin: 0;
	width: 100%
}
.card-full-width-img {
	max-width: 100%
}
@media (max-width: 972px) {
	.card-full-width-img {
		display: none;
	}
	.card-full-width-text {
		width: 100% !important;
	}
}
.card-action > .right {
	margin: 20px 0;
}
.card .card-action {
	padding: 0;
}
.round-2 {
	border-radius: 2px;
}
.round-4 {
	border-radius: 4px;
}
#toast-container {
	z-index: 1004;
}

/* MOS Logo */
.logo-container {
	display: flex;
	justify-content: center;
	height: 100%;
}
.logo-card {
	align-self: center;
	width: 100%;
}
.logo {
	font-weight: 900;
	font-size: 100px;
	color: #1e88e5;
	text-align: center;
}
@media (max-width: 1200px) {
	.logo {
		font-size: 72px;
	}
}
@media (max-width: 850px) {
	.logo {
		font-weight: 800;
		font-size: 54px;
	}
}
@media (max-width: 650px) {
	.logo {
		font-size: 48px;
	}
}
@media (max-width: 350px) {
	.logo {
		font-size: 28px;
		font-weight: 700;
	}
}

/* Icons Card */
#icons-card {
	margin-top: 10%;
}

/* MOS Parallax */
.header {
	background: url('/img/background.png') no-repeat center center fixed;
}
.icons {
	background: url('/img/largeshowcase-dark.png') no-repeat center center fixed;
}
.mosparallax-clear {
	height: 100%;
	width: 100%;
}
.mosparallax {
	-webkit-background-size: cover;
	-moz-background-size: cover;
	-o-background-size: cover;
	background-size: cover;
	width: 100%;
	height: 100%;
	position: absolute;
}

/* No Select */
.noselect {
	-webkit-user-select: none;
	-moz-user-select: none;
	-ms-user-select: none;
	user-select: none;
	cursor: default;
}

/* Pre Animation */
.not-animated-yet {
	visibility: hidden;
}

/* Material Ease Animation (CSS and JS)
Copyright: Kupletsky Sergey
URL: http://codepen.io/zavoloklom/pen/Jbrho */
.display-animation > * {
	-webkit-transform: scale(0);
	-ms-transform: scale(0);
	-o-transform: scale(0);
	transform: scale(0);
}
.display-animation > .animated {
	-webkit-transform: scale(1);
	-ms-transform: scale(1);
	-o-transform: scale(1);
	transform: scale(1);
	-webkit-transition: all 0.3s cubic-bezier(0.55, 0, 0.1, 1);
	-o-transition: all 0.3s cubic-bezier(0.55, 0, 0.1, 1);
	transition: all 0.3s cubic-bezier(0.55, 0, 0.1, 1);
}
.no-js .display-animation > * {
	-webkit-transform: scale(1);
	-ms-transform: scale(1);
	-o-transform: scale(1);
	transform: scale(1);
}
.animated {
	-webkit-animation-duration: 1s;
	animation-duration: 1s;
	-webkit-animation-fill-mode: both;
	animation-fill-mode: both;
}

/* 1 Second Ease Fade In Up*/
@-webkit-keyframes fadeInUp {
	0% {
		opacity: 0;
		-webkit-transform: translateY(20px);
	}
	100% {
		opacity: 1;
		-webkit-transform: translateY(0);
	}
}
@keyframes fadeInUp {
	0% {
		opacity: 0;
		transform: translateY(20px);
	}
	100% {
		opacity: 1;
		transform: translateY(0);
	}
}
.fadeInUp {
	-webkit-animation-name: fadeInUp;
	animation-name: fadeInUp;
}

/* 2 Second Ease Fade In Up */
.animated-2 { 
	-webkit-animation-duration: 2s; 
	animation-duration: 2s; 
	-webkit-animation-fill-mode: both; 
	animation-fill-mode: both; 
} 
@-webkit-keyframes fadeInUp-2 { 
	0% { 
		opacity: 0; 
		-webkit-transform: translateY(100vh); 
	} 
	100% { 
		opacity: 1; 
		-webkit-transform: translateY(0); 
	} 
} 
@keyframes fadeInUp-2 { 
	0% { 
		opacity: 0; 
		transform: translateY(100vh); 
	} 
	100% { 
		opacity: 1; 
		transform: translateY(0); 
	} 
} 
.fadeInUp-2 { 
	-webkit-animation-name: fadeInUp-2; 
	animation-name: fadeInUp-2; 
}

/* 0.5 Second Ease Fade Out Up */
.animated-05 {
	-webkit-animation-duration: 0.5s;
	animation-duration: 0.5s;
	-webkit-animation-fill-mode: both;
	animation-fill-mode: both;
}
@-webkit-keyframes fadeOutUp {
	0% {
		opacity: 1;
		-webkit-transform: translateY(0);
	}
	100% {
		opacity: 0;
		-webkit-transform: translateY(-20px);
	}
}
@keyframes fadeOutUp {
	0% {
		opacity: 1;
		transform: translateY(0);
	}
	100% {
		opacity: 0;
		transform: translateY(-20px);
	}
}
.fadeOutUp {
	-webkit-animation-name: fadeOutUp;
	animation-name: fadeOutUp;
}

